Handle language quickfilter